--- a/config.properties
+++ b/config.properties
@@ -62,4 +62,4 @@ overwrite-call-trees-runtime-data=true
 
 # Path for our power monitor program on Windows
 # On Windows, please escape slashes twice
-powermonitor-path=C:\\joularjx\\PowerMonitor.exe
+powermonitor-path=assets\\PowerMonitor.exe
